[gd_scene load_steps=12 format=3 uid="uid://kpxck4bb7pjp"]

[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/DialogHelperTool.gd" id="1_yrap7"]
[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/SceneLineEdit.gd" id="2_kek1r"]
[ext_resource type="PackedScene" uid="uid://cjcwj2co4fkg1" path="res://addons/DialogHelperTool/Shared/Dropdownbox/Dropdownbox.tscn" id="3_agk65"]
[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/DropValidators/BackgroundsContainer.gd" id="4_47ay6"]
[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/DropValidators/VideosMarginContainer.gd" id="5_12iq5"]
[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/DropValidators/AudioMarginContainer.gd" id="6_8f5qb"]
[ext_resource type="PackedScene" uid="uid://b3o5x2qfahd2f" path="res://addons/DialogHelperTool/Tool/TimelineItem/ScriptModal/ScriptModal.tscn" id="7_rytfn"]
[ext_resource type="PackedScene" uid="uid://dgh0ovmttvlnj" path="res://addons/DialogHelperTool/Tool/TimelineItem/TransitionsModal/TransitionsModal.tscn" id="8_rgo2k"]
[ext_resource type="PackedScene" uid="uid://c2ygcuhvy26ae" path="res://addons/DialogHelperTool/Tool/RootsEditorModal/RootsEditorModal.tscn" id="9_i4a37"]
[ext_resource type="PackedScene" uid="uid://o172w0xp1fs4" path="res://addons/DialogHelperTool/Tool/Choices/ChoicesModal.tscn" id="10_7rtyc"]

[sub_resource type="LabelSettings" id="LabelSettings_p81f4"]
font_size = 20

[node name="DialogHelperTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.01, 1.01)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_yrap7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30

[node name="Scene" type="Control" parent="VBoxContainer/TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Scene"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Scene/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 0
columns = 3

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Scene Folder"

[node name="SceneFolder" type="LineEdit" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(600, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "res://Resources/Scene1/"
editable = false
script = ExtResource("2_kek1r")

[node name="Button" type="Button" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
text = "..."

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start timeline
"

[node name="TimelineList" type="OptionButton" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 25
toggle_mode = false
item_count = 2
selected = 1
popup/item_0/text = "second"
popup/item_0/id = 0
popup/item_1/text = "start"
popup/item_1/id = 1

[node name="Filler" type="Control" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Scene 
"

[node name="SceneFile" type="LineEdit" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(600, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "res://Game/start.tscn"
editable = false

[node name="Button3" type="Button" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "..."

[node name="Control" type="Control" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="ReloadButton" type="Button" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Reload Scene"

[node name="Control2" type="Control" parent="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Timeline" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Timeline"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Timeline/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer2" type="ScrollContainer" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 0
horizontal_scroll_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer"]
layout_mode = 2
text = "Timeline: "
label_settings = SubResource("LabelSettings_p81f4")
vertical_alignment = 1

[node name="TimelinesList" type="OptionButton" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.33
theme_override_font_sizes/font_size = 20
item_count = 2
selected = 1
popup/item_0/text = "second"
popup/item_0/id = 0
popup/item_1/text = "start"
popup/item_1/id = 1

[node name="LoadTimelineButton" type="Button" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "RELOAD"

[node name="SaveTimelineButton" type="Button" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "  SAVE  "

[node name="AddTimelineItemButton" type="Button" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "   ADD   "

[node name="RemoveTimelineItemButton" type="Button" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "   REMOVE   "

[node name="MoveUpTimelineItemButton" type="Button" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer"]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "  /\\  "

[node name="MoveDownTimelineItemButton" type="Button" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer"]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "  \\/  "

[node name="RootsEditorButton" type="Button" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = " ROOTS EDITOR "

[node name="RootList" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer" instance=ExtResource("3_agk65")]
custom_minimum_size = Vector2(120, 25)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TimeLine" type="VBoxContainer" parent="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Backgrounds" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Backgrounds"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Backgrounds/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 40
script = ExtResource("4_47ay6")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Backgrounds/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="HFlowContainer" parent="VBoxContainer/TabContainer/Backgrounds/HBoxContainer/MarginContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/TabContainer/Backgrounds/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Backgrounds/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8

[node name="AddBackgroundButton" type="Button" parent="VBoxContainer/TabContainer/Backgrounds/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Add "

[node name="RemoveBackgroundButton2" type="Button" parent="VBoxContainer/TabContainer/Backgrounds/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Remove Selected"

[node name="SaveBackgroundsButton" type="Button" parent="VBoxContainer/TabContainer/Backgrounds/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="Videos" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Videos"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.011
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -11.33
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
script = ExtResource("5_12iq5")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Videos/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Videos/MarginContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
columns = 4

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/TabContainer/Videos"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -254.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Videos/MarginContainer2"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8

[node name="AddBackgroundButton" type="Button" parent="VBoxContainer/TabContainer/Videos/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Add "

[node name="RemoveBackgroundButton2" type="Button" parent="VBoxContainer/TabContainer/Videos/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Remove Selected"

[node name="SaveBackgroundsButton" type="Button" parent="VBoxContainer/TabContainer/Videos/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="Audios" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Audios"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.011
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -11.33
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
script = ExtResource("6_8f5qb")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Audios/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Audios/MarginContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
columns = 5

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/TabContainer/Audios"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -254.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Audios/MarginContainer2"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8

[node name="AddBackgroundButton" type="Button" parent="VBoxContainer/TabContainer/Audios/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Add "

[node name="RemoveBackgroundButton2" type="Button" parent="VBoxContainer/TabContainer/Audios/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Remove Selected"

[node name="SaveBackgroundsButton" type="Button" parent="VBoxContainer/TabContainer/Audios/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="Characters" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/Characters"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Characters/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Characters/MarginContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
columns = 6

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/TabContainer/Characters"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -254.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Characters/MarginContainer2"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8

[node name="AddBackgroundButton" type="Button" parent="VBoxContainer/TabContainer/Characters/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Add "

[node name="RemoveBackgroundButton2" type="Button" parent="VBoxContainer/TabContainer/Characters/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Remove Selected"

[node name="SaveBackgroundsButton" type="Button" parent="VBoxContainer/TabContainer/Characters/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="Persons" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="ScriptModal" parent="." instance=ExtResource("7_rytfn")]
visible = false
layout_mode = 1

[node name="TransitionsModal" parent="." instance=ExtResource("8_rgo2k")]
visible = false
layout_mode = 1

[node name="RootsEditorModal" parent="." instance=ExtResource("9_i4a37")]
visible = false
layout_mode = 1

[node name="ChoicesModal" parent="." instance=ExtResource("10_7rtyc")]
visible = false
layout_mode = 1

[connection signal="scene_folder_changed" from="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer/SceneFolder" to="." method="_on_scene_folder_changed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer/Button" to="." method="_on_folder_picked_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer/Button3" to="." method="_on_scene_start_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Scene/MarginContainer/VBoxContainer/GridContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer/LoadTimelineButton" to="." method="_on_load_timeline_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer/SaveTimelineButton" to="." method="_on_save_timeline_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer/AddTimelineItemButton" to="." method="add_new_event"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer/RemoveTimelineItemButton" to="." method="remove_selected"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer/MoveUpTimelineItemButton" to="." method="move_up"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer/MoveDownTimelineItemButton" to="." method="_on_move_down_timeline_item_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer/RootsEditorButton" to="." method="_on_roots_editor_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/TabContainer/Timeline/MarginContainer/VBoxContainer/ScrollContainer2/HBoxContainer/RootList" to="." method="_on_root_list_item_selected"]
[connection signal="dropped_data" from="VBoxContainer/TabContainer/Backgrounds/HBoxContainer/MarginContainer" to="." method="_on_margin_container_dropped_data"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Backgrounds/HBoxContainer/MarginContainer2/VBoxContainer/AddBackgroundButton" to="." method="_on_add_background_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Backgrounds/HBoxContainer/MarginContainer2/VBoxContainer/RemoveBackgroundButton2" to="." method="_on_remove_background_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Backgrounds/HBoxContainer/MarginContainer2/VBoxContainer/SaveBackgroundsButton" to="." method="save_scene_config"]
[connection signal="dropped_data" from="VBoxContainer/TabContainer/Videos/MarginContainer" to="." method="_on_videos_dropped_data"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Videos/MarginContainer2/VBoxContainer/AddBackgroundButton" to="." method="_on_add_videos_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Videos/MarginContainer2/VBoxContainer/RemoveBackgroundButton2" to="." method="_on_remove_videos_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Videos/MarginContainer2/VBoxContainer/SaveBackgroundsButton" to="." method="save_scene_config"]
[connection signal="dropped_data" from="VBoxContainer/TabContainer/Audios/MarginContainer" to="." method="_on_audios_dropped_data"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Audios/MarginContainer2/VBoxContainer/AddBackgroundButton" to="." method="_on_add_audios_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Audios/MarginContainer2/VBoxContainer/RemoveBackgroundButton2" to="." method="_on_remove_audios_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Audios/MarginContainer2/VBoxContainer/SaveBackgroundsButton" to="." method="save_scene_config"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Characters/MarginContainer2/VBoxContainer/AddBackgroundButton" to="." method="_on_add_characters_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Characters/MarginContainer2/VBoxContainer/RemoveBackgroundButton2" to="." method="_on_remove_characters_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Characters/MarginContainer2/VBoxContainer/SaveBackgroundsButton" to="." method="save_scene_config"]
[connection signal="back_clicked" from="ScriptModal" to="." method="_on_script_window_popup_hide"]
[connection signal="success" from="ScriptModal" to="." method="_on_script_window_text_saved"]
[connection signal="back_clicked" from="TransitionsModal" to="." method="_on_transitions_modal_back_clicked"]
[connection signal="back_clicked" from="RootsEditorModal" to="." method="_on_roots_editor_modal_back_clicked"]
[connection signal="root_name_changed" from="RootsEditorModal" to="." method="_on_roots_editor_modal_root_name_changed"]
[connection signal="back_clicked" from="ChoicesModal" to="." method="_on_choices_modal_back_clicked"]
[connection signal="create_root" from="ChoicesModal" to="." method="create_root"]
[connection signal="open_root" from="ChoicesModal" to="." method="_on_root_list_item_selected"]
